--- a/sync-from-github.yml
+++ b/sync-from-github.yml
@@ -16,7 +16,11 @@ jobs:
       # Synchronize code from GitHub repository to this repository in Azure DevOps
       # git@github.com:tlaukkanen/devops-ai-developer.git
       - script: |
-          git remote add github git@github.com:tlaukkanen/devops-ai-developer.git
+          git config user.email "ai-developer@codeof.me"
+          git config user.name "DevOps AI Developer"
+          git remote remove github || true
+          # Add GitHub remote and fetch latest changes
+          git remote add github https://github.com/tlaukkanen/devops-ai-developer.git
           git fetch github
           git reset --hard github/main
           git push origin main --force
