--- a/ai-developer-pipeline.yml
+++ b/ai-developer-pipeline.yml
@@ -7,7 +7,32 @@ schedules:
     always: true
 
 jobs:
+  - job: CheckForTasks
+    pool:
+      vmImage: 'ubuntu-latest' # Or self-hosted with preinstalled tools
+    steps:
+      - checkout: self
+
+      - task: PythonScript@0
+        displayName: 'Check for New Tasks'
+        inputs:
+          scriptSource: 'filePath'
+          scriptPath: 'check_for_tasks.py'
+        env:
+          AZURE_DEVOPS_ORG: tlaukkanen
+          AZURE_DEVOPS_PROJECT: simple-to-do
+          AZURE_DEVOPS_PAT: $(System.AccessToken)
+
+      - script: |
+          echo "##vso[task.setvariable variable=TASK_ID]$(cat task_id.txt)"
+        displayName: 'Set Task ID Variable'
+
   - job: RunAIAgent
+    dependsOn: CheckForTasks
+    variables:
+      TASK_ID: $[ dependencies.CheckForTasks.outputs['task_id'] ]
+    # This job runs only if a new task is found and is not zero
+    condition: and(succeeded(), ne(variables['TASK_ID'], '0'))
     pool:
       vmImage: 'ubuntu-latest' # Or self-hosted with preinstalled tools
     steps:
