--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "azure-devops>=7.1.0b4",
+    "requests>=2.32.3",
     "ruff>=0.11.12",
 ]
