Refactor code structure for improved readability and maintainability

--- a/ai-developer-pipeline.yml
+++ b/ai-developer-pipeline.yml
@@ -1,10 +1,10 @@
 trigger: none
-schedules:
-  - cron: "0 * * * *" # Optional hourly trigger
-    displayName: Hourly check
-    branches:
-      include: [ main ]
-    always: true
+# schedules:
+#   - cron: "0 * * * *" # Optional hourly trigger
+#     displayName: Hourly check
+#     branches:
+#       include: [ main ]
+#     always: true
 
 jobs:
   - job: CheckForTasks
