--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "azure-devops>=7.1.0b4",
+    "langchain>=0.3.25",
+    "langchain-community>=0.3.24",
+    "langchain-core>=0.3.63",
+    "langchain-openai>=0.3.18",
+    "openai>=1.82.1",
     "requests>=2.32.3",
     "ruff>=0.11.12",
 ]
