--- a/ai-developer-pipeline.yml
+++ b/ai-developer-pipeline.yml
@@ -8,11 +8,6 @@ trigger: none
 
 resources:
   repositories:
-    - repository: devops-ai-developer
-      type: github
-      name: tlaukkanen/devops-ai-developer
-      ref: refs/heads/main
-      trigger: none
     - repository: simple-to-do
       type: git
       name: simple-to-do
@@ -24,7 +19,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest' # Or self-hosted with preinstalled tools
     steps:
-      - checkout: devops-ai-developer
+      - checkout: git://github.com/tlaukkanen/devops-ai-developer
 
       - task: PythonScript@0
         displayName: 'Check for New Tasks'
@@ -52,7 +47,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest' # Or self-hosted with preinstalled tools
     steps:
-      - checkout: devops-ai-developer
+      - checkout: git://github.com/tlaukkanen/devops-ai-developer
 
       - checkout: simple-to-do
         path: 'simple-to-do'
