--- a/ai-developer-pipeline.yml
+++ b/ai-developer-pipeline.yml
@@ -8,6 +8,12 @@ trigger: none
 
 resources:
   repositories:
+    - repository: devops-ai-developer
+      type: github
+      name: tlaukkanen/devops-ai-developer
+      endpoint: 'tlaukkanen'
+      ref: refs/heads/main
+      trigger: none
     - repository: simple-to-do
       type: git
       name: simple-to-do
@@ -19,7 +25,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest' # Or self-hosted with preinstalled tools
     steps:
-      - checkout: https://github.com/tlaukkanen/devops-ai-developer.git
+      - checkout: devops-ai-developer
 
       - task: PythonScript@0
         displayName: 'Check for New Tasks'
@@ -47,7 +53,7 @@ jobs:
     pool:
       vmImage: 'ubuntu-latest' # Or self-hosted with preinstalled tools
     steps:
-      - checkout: https://github.com/tlaukkanen/devops-ai-developer.git
+      - checkout: devops-ai-developer
 
       - checkout: simple-to-do
         path: 'simple-to-do'
