Refactor repository alias in pipeline configuration to use 'self' for devops-ai-developer

--- a/ai-developer-pipeline.yml
+++ b/ai-developer-pipeline.yml
@@ -8,7 +8,7 @@ trigger: none
 
 resources:
   repositories:
-    - repository: devops-ai-developer
+    - repository: self
       type: github
       name: tlaukkanen/devops-ai-developer
       endpoint: 'tlaukkanen'
