--- a/ai-developer-pipeline.yml
+++ b/ai-developer-pipeline.yml
@@ -69,7 +69,7 @@ jobs:
           uv sync
           uv run ai_agent_runner.py $(TaskId) --codebase-path ../simple-to-do
         displayName: 'Run LangChain AI Agent'
-        workingDirectory: '$(Build.SourcesDirectory)/devops-ai-developer'
+        workingDirectory: '$(Pipeline.Workspace)/devops-ai-developer'
         env:
           AZURE_DEVOPS_ORG: tlaukkanen
           AZURE_DEVOPS_PROJECT: simple-to-do
