--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.3.25",
     "langchain-community>=0.3.24",
     "langchain-core>=0.3.63",
+    "langchain-experimental>=0.3.4",
     "langchain-openai>=0.3.18",
     "openai>=1.82.1",
     "requests>=2.32.3",
