Persist credentials for simple-to-do repo when checking out

--- a/ai-developer-pipeline.yml
+++ b/ai-developer-pipeline.yml
@@ -59,6 +59,7 @@ jobs:
 
       - checkout: simple-to-do
         path: 'simple-to-do'
+        persistCredentials: true
         displayName: 'Checkout simple-to-do repository'
 
       - task: UseNode@1
